manifests/order/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order
    version: v1
  name: order
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: order
