manifests/order/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: order
    version: v1
  name: order
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: order
    weight: 100
  wildcardPolicy: None
